--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: lldjlocal
     password: 1234
-    url: jdbc:mysql://localhost:3306/placehub__prod?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://172.17.0.1:3306/placehub__prod?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
   thymeleaf:
     cache: false
