--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,4 @@
 server:
-  port: 443
   ssl:
     enabled: true
     key-store-type: PKCS12
@@ -8,6 +7,7 @@ server:
 spring:
   thymeleaf:
     cache: false
+    prefix: classpath:/templates/
 custom:
   site:
     baseUrl: https://localhost
