Fix : redirect url

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -16,3 +16,7 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+
+custom:
+  site:
+    baseUrl: https://www.placehub.xyz
